Fix #114390013 text properly escape new lines on firefox

--- a/form/wicket/src/main/java/br/net/mirante/singular/form/wicket/mapper/annotation/annotation.css
+++ b/form/wicket/src/main/java/br/net/mirante/singular/form/wicket/mapper/annotation/annotation.css
@@ -18,3 +18,7 @@
     background: white;
     width: 350px;
 }
+
+.sannotation-text-comment {
+    font-style: italic;
+}
